Fix spacing issue with staggered cards on mobile

--- a/src/components/About/BoardRight/BoardRight.css
+++ b/src/components/About/BoardRight/BoardRight.css
@@ -62,9 +62,6 @@
 @media screen and (max-width:568px) {
     .board-right-info {
         grid-column: 1;
-        margin-top: none;
-        margin-left: none;
         margin: 1rem;
-        margin-left: none;
     }
 }
